# voice-activity-detection

./: CMakeLists.txt  silero-vad.ipynb  test.py  utils_vad.py
frontend/: CMakeLists.txt  WaveUtil.cc  WaveUtil.h
model/: CMakeLists.txt  torch_vad_model.cc  torch_vad_model.h  vad_api.cc  vad_api.h  vad_engine.cc  vad_engine.h  vad_informer.cc  vad_informer.h  vad_state.h
utils/: CMakeLists.txt  json.hpp  log.h  my_utils.h  string.cc  string.h  wav.h
